--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  "files": [
+    "./node_modules/@sbolpro/design-system-types/index.d.ts"
+  ],
   "include": [
     "src"
   ]
