--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/cache": "^11.4.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/serialize": "^1.0.2",
+    "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.0",
+    "@sbol/design-system": "^0.6.10",
+    "@sbolpro/app-toolkit": "0.0.9",
+    "@sbolpro/design-system-types": "^0.1.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +20,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
